crates/rome_formatter/tests/specs/prettier/cursor/comments-3.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: comments-3.js

---
# Input
```js
/<|>/ howdy
// hi lol
const y = 5

```

# Output
```js
/<|>/;
howdy;
// hi lol
const y = 5;

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ comments-3.js:1:7
  │
1 │ /<|>/ howdy
  │ ------^^^^^
  │ │     │
  │ │     An explicit or implicit semicolon is expected here...
  │ ...Which is required to end this statement


```


